# uartRpc

./: .gitmodules  README.md  UartRpcClient.c  UartRpcClient.h  UartRpcCommon.h  UartRpcErrors.h  UartRpcServer.c  UartRpcServer.h
cobslib/: cobs.c  cobs.h
cobslib/test/: CMakeLists.txt  test_decode.c  test_encode.c
testProj/: CMakeLists.txt  test.c
